<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="planets_array">
        <item>Red</item>
        <item>Yellow</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Black</item>
        <item>White</item>
        <item>Magenta</item>
        <item>Cyan</item>
    </string-array>
    <string-array name="size_array">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
<string name="str_Open">Open</string>
<string name="str_Menu">Menu</string>
    <string name="responsive_ui">Responsive UI</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="app_name">AP8</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="datetime">Date &amp; Time</string>
    <string name="str_userlogin">User Log-In</string>
    <string name="str_companylogo">Company Logo</string>
    <string name="str_counter">Counter</string>
    <string name="str_userprofile">User Profile</string>
    <string name="str_companyProfile">Company Profile</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_delete">Delete</string>
    <string name="str_username">Username</string>
    <string name="str_changeuser">Change User</string>
    <string name="str_itemName">ItemName</string>
    <string name="str_chooseMode">Choose Mode</string>
    <string name="str_groupName">Group Name</string>
    <string name="str_groupNameChines">Group Name Chinese</string>
    <string name="str_groupCode">Group Code</string>
    <string name="str_group">Group</string>
    <string name="str_producQuantity">Product Quantity</string>
    <string name="str_receipt">Receipt</string>
    <string name="str_fillNote">Fill Note Here</string>
    <string name="str_enterYourSearch">Enter your search</string>
    <string name="str_search">Search</string>
    <string name="str_change">Change</string>
    <string name="str_chooseReport">Choose Report</string>
    <string name="str_managerItem">Manage Item</string>
    <string name="str_stockInItem">Resend to Kitchen</string>
    <string name="str_inventoryCheck">Style and Request</string>
    <string name="str_viewReport">View Report</string>
    <string name="str_printer">Printer Copy</string>
    <string name="str_custom">Custom</string>
    <string name="str_searchBill">Search Bill</string>
    <string name="str_holdBill">Split Bill</string>
    <string name="str_rePrint">Send Order</string>
    <string name="str_note">Note</string>
    <string name="str_scan">Scan</string>
    <string name="str_itemCode">Item Code</string>
    <string name="str_items">Items</string>
    <string name="str_unitPrice">Unit Price</string>
    <string name="str_qty">Qty</string>
    <string name="str_discount">Discount</string>
    <string name="str_amount">Amount</string>
    <string name="str_refund">Refund</string>
    <string name="str_foc">FOC</string>
    <string name="str_billdiscount">Bill Discount</string>
    <string name="str_editSale">Edit Sale</string>
    <string name="str_unPaid">Edit Pax</string>
    <string name="str_cancelBill">Cancel Bill</string>
    <string name="str_subTotal">Sub-Total</string>
    <string name="str_totalAmount">Total Amount</string>
    <string name="str_payment">PAYMENT</string>
    <string name="str_nettsale">NETT SALE</string>
    <string name="str_openCash">OPEN CASH DRAWER</string>
    <string name="str_enterYourSearchItem">Enter your search item</string>
    <string name="str_searchItem">Search Item</string>
    <string name="str_confirmWReceipt">Confirm w/ Receipt</string>
    <string name="str_defineCustom">Define Custom Item</string>
    <string name="str_productName">Product Name</string>
    <string name="str_quantity">Quantity</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_enterReceiptNum">Enter receipt number</string>
    <string name="str_receiptNo">Receipt No.</string>
    <string name="str_reasonRefund">Reason/s for refund</string>
    <string name="str_deleteItem">Delete Item</string>
    <string name="str_manageItems">Reprint Order</string>
    <string name="str_itemList">Item List</string>
    <string name="str_choosePicture">Choose Picture</string>
    <string name="str_color">Colour</string>
    <string name="str_active">Active</string>
    <string name="str_inActive">Inactive</string>
    <string name="str_itemGroup">Item Group</string>
    <string name="str_chineseName">Chinese Name</string>
    <string name="str_barCode">Barcode</string>
    <string name="str_costPrice">Cost Price</string>
    <string name="str_price">Price</string>
    <string name="str_price2">Price 2</string>
    <string name="str_SpecialPrice">Special Price</string>
    <string name="str_LowStockAlert">Low Stock Alert</string>
    <string name="str_DisplayOrder">Display Order</string>
    <string name="str_BaseStock">Base Stock</string>
    <string name="str_GroupList">Group List</string>
    <string name="str_PrinterSetting">Printer Setting</string>
    <string name="str_Printer1">Printer #1</string>
    <string name="str_Copies">Copies</string>
    <string name="str_Organisation">Organisation</string>
    <string name="str_CompanyName">Company Name</string>
    <string name="str_Address">Address</string>
    <string name="str_Telephone">Telephone</string>
    <string name="str_Facsimile">Facsimile</string>
    <string name="str_Email">Email</string>
    <string name="str_Website">Website</string>
    <string name="str_CompanyRegNo">Company Reg. No.</string>
    <string name="str_GSTNo">GST No.</string>
    <string name="str_ReceiptFooter">Receipt Footer</string>
    <string name="str_pass">Password</string>
    <string name="str_SalesReport">Sales Report</string>
    <string name="str_InventoryReport">Inventory Report</string>
    <string name="str_PrintCurrentReport">Print Current Report</string>
    <string name="str_PrintCurrentReportA4">Print Current Report(A4)</string>
    <string name="str_EndShift">END SHIFT</string>
    <string name="str_From">From</string>
    <string name="str_To">To</string>
    <string name="str_OpeningCash">Opening Cash</string>
    <string name="str_GrossSale">Gross Sale</string>
    <string name="str_ItemSale">ItemSale</string>
    <string name="str_TotalCash">Total Cash</string>
    <string name="str_NumberofSale">Number of Sale</string>
    <string name="str_ItemDiscount">Item Discount</string>
    <string name="str_SaleRefund">Sale Refund</string>
    <string name="str_CASH">CASH</string>
    <string name="str_CARDS">CARDS</string>
    <string name="str_UNPAIDBILL">UN-PAID BILL</string>
    <string name="str_StockInhand">Stock In-hand</string>
    <string name="str_StockIn">Stock-In</string>
    <string name="str_StockOut">Stock-Out</string>
    <string name="str_BalanceStock">Balance Stock</string>
    <string name="str_AverageUnitCost">Average Unit Cost</string>
    <string name="str_StockValue">Stock Value</string>
    <string name="str_TOPMOVINGITEMS">TOP MOVING ITEMS</string>
    <string name="str_TICKETREPORT">TICKET REPORT</string>
    <string name="str_BillNo">Bill No.</string>
    <string name="str_CloseSession">Close Session</string>
    <string name="str_CreditCard">Credit Card</string>
    <string name="str_User">User</string>
    <string name="str_SendtoPrinter">Send to Printer</string>
    <string name="str_phantramDis">% Discount</string>
    <string name="str_phantramDolla">$ Discount</string>
        <string name="str_YouChoose">You Choose </string>
    <string name="str_ChooseReport">Choose Report</string>
    <string name="str_ChooseMode">Choose Mode</string>
    <string name="str_TextSize">Text Size</string>
    <string name="str_Small">Small</string>
    <string name="str_Medium">Medium</string>
    <string name="str_Large">Large</string>
    <string name="str_InputName">Input Name</string>
    <string name="str_Back">Back</string>
    <string name="str_PrintPreview">Print Preview</string>
    <string name="str_PrintNumber">Print Number</string>
    <string name="str_ManageGroup">Manage Group</string>
    <string name="str_Red">Red</string>
    <string name="str_Yellow">Yellow</string>
    <string name="str_Blue">Blue</string>
    
     <string name="str_Green">Green</string>
    <string name="str_Black">Black</string>
    <string name="str_White">White</string>
     <string name="str_Magenta">Magenta</string>
    <string name="str_Cyan">Cyan</string>
      <string name="str_Edit">Edit</string>
</resources>