<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/rlAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fcb131"
        android:orientation="horizontal"
        android:padding="10dp" >

        <RelativeLayout
            android:id="@+id/rlMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="-" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="+" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlItemCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvItemCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/str_itemCode" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/str_itemName" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlUnitPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvUnitPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/str_unitPrice" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/str_qty" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlDiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/str_discount" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlAmount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/str_amount" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>