<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/llTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <RelativeLayout
            android:id="@+id/rlRecieptNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvRecieptNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_receiptNo"
                android:textAppearance="@android:style/TextAppearance.Medium" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datetime"
                android:textAppearance="@android:style/TextAppearance.Medium" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlTotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvTotalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/str_totalAmount"
                android:textAppearance="@android:style/TextAppearance.Medium" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>