<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="10dp" >

    <RelativeLayout
        android:id="@+id/rlShow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/rltBillNo"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvtBill"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/str_BillNo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rltCounter"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/rltBillNo"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvtCounter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/str_counter"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rltClose"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/rltCounter"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvtClose"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/str_CloseSession"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rltTotalAmount"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/rltClose"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvtTotalAmount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/str_totalAmount"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rltCash"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/rltTotalAmount"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvtCash"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/str_CASH"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rltCard"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/rltCash"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvtCard"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/str_CARDS"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rltGST"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/rltCard"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvtGST"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="GST"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rltUser"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/rltGST"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvtUser"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/str_User"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>