<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
        android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/llItemcode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tvItemCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/str_itemCode" />

                <EditText
                    android:id="@+id/edItemCode"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:enabled="false"
                    android:layout_toRightOf="@+id/tvItemCode" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" >

                <TextView
                    android:id="@+id/tvQty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/str_qty" />

                <EditText
                    android:id="@+id/edQty"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:inputType="numberDecimal"
                    android:layout_toRightOf="@+id/tvQty" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llItemName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llItemcode"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/str_itemName" />

                <EditText
                    android:id="@+id/edItemname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/tvItemName" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llUnitPrice"
            android:layout_width="fill_parent"
            android:layout_below="@+id/llItemName"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tvUnitPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/str_unitPrice" />

                <EditText
                    android:id="@+id/edUnitPrice"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned|numberDecimal"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/tvUnitPrice" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tvTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/str_totalAmount" />

                <EditText
                    android:id="@+id/edTotal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/tvTotal" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>